--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,6 @@ jobs:
       - run: npm ci
       - run: npm run test:build
   publish:
-    if: github.ref == 'refs/heads/main'
     needs:
       - test-spelling
       - test-format
@@ -47,4 +46,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           keep_files: true
           user_name: QubitPi
-          user_email: jack20191124@proton.me
+          user_email: jack20220723@gmail.com
+          cname: graphql.qubitpi.org
